feat: fetch blog page from notions
The fetching is already working and also navigation for an article.

setup analytics

Signed-off-by: Lionel H <lionel.hubaut@dekimo.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -13,10 +17,36 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/components/notion/*": [
+        "components/notion/*"
+      ],
+      "@/data/*": ["data/*"],
+      "@helpers/*": ["./app/utils/helpers/*"],
+      "@/lib/*": [
+        "lib/*"
+      ],
+      "@/styles/*": [
+        "styles/*"
+      ]
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
+, "app/blog/[slug]/page.js", "components/Text.js", "lib/notion.js"  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
