--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "@next/third-parties": "^15.1.6",
+    "@notion-render/client": "^0.0.2",
+    "@notionhq/client": "^2.2.15",
+    "@tailwindcss/typography": "^0.5.15",
+    "eslint-plugin-prettier": "^5.2.1",
+    "next": "15.0.3",
+    "next-themes": "^0.4.4",
+    "notion-to-md": "^3.1.1",
+    "notion-types": "^7.1.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@notionhq/client": "^2.2.15",
+    "@types/node": "22.10.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.16.0",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prettier": "3.4.1",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "typescript": "5.7.2",
+    "uuid": "^11.0.3"
   }
 }
