feat: migrate from db push to proper Prisma migrations
- Created initial migration with complete schema (including featuredImage)
- Added vercel-build script for production deployments
- Added postinstall script to generate Prisma Client
- Fixed seed script to work with migrate reset
- Removed database cleanup from seed (redundant after reset)

This enables proper migration management in production on Vercel.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
     "lint": "eslint",
+    "postinstall": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:seed:prod": "NODE_ENV=production tsx prisma/seed.ts",
     "db:reset": "prisma migrate reset --force",
