--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,12 +71,11 @@ jobs:
           NEXTAUTH_SECRET: test-secret-key-for-ci
         run: npm test
 
-  # Build job - required for main branch only
+  # Build job - required for all branches that will be deployed
   build:
     name: ci/build
     runs-on: ubuntu-latest
-    # Only run build check for main branch PRs and pushes
-    if: github.base_ref == 'main' || github.ref == 'refs/heads/main'
+    # Run build check for all branches (dev, staging, main) to ensure preview deployments work
 
     steps:
       - name: Checkout code
@@ -126,11 +125,55 @@ jobs:
           echo "Tests failed or were skipped"
           exit 1
 
-      - name: Check build results (main only)
-        if: (github.base_ref == 'main' || github.ref == 'refs/heads/main') && needs.build.result != 'success'
+      - name: Check build results
+        if: needs.build.result != 'success'
         run: |
           echo "Build failed or was skipped"
           exit 1
 
       - name: All checks passed
         run: echo "All required checks passed successfully"
+
+  # Deploy to Vercel after CI passes
+  deploy:
+    name: Deploy to Vercel
+    runs-on: ubuntu-latest
+    needs: [status-check]
+    # Only deploy on pushes (not PRs) after all checks pass
+    if: github.event_name == 'push' && needs.status-check.result == 'success'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to Vercel (Production)
+        if: github.ref == 'refs/heads/main'
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-args: '--prod'
+          scope: ${{ secrets.VERCEL_ORG_ID }}
+
+      - name: Deploy to Vercel (Preview - Staging)
+        if: github.ref == 'refs/heads/staging'
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          scope: ${{ secrets.VERCEL_ORG_ID }}
+        env:
+          VERCEL_ENV: preview
+
+      - name: Deploy to Vercel (Preview - Dev)
+        if: github.ref == 'refs/heads/dev'
+        uses: amondnet/vercel-action@v25
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          scope: ${{ secrets.VERCEL_ORG_ID }}
+        env:
+          VERCEL_ENV: preview
