--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "lucide-react": "^0.546.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.4.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.16.3",
     "platejs": "^50.3.8",
