feat: add openapi schemas for api/admin endpoints
This will be useful for external tool integration like n8n for
generating and managing posts.

Signed-off-by: Lionel H <me@nullbyte.be>

--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "@vercel/blob": "^2.0.0",
     "@vercel/speed-insights": "^1.2.0",
     "ai": "^5.0.28",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -98,6 +100,7 @@
     "emoji-mart": "^5.6.0",
     "gray-matter": "^4.0.3",
     "html2canvas-pro": "^1.5.12",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.546.0",
@@ -143,6 +146,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "^19",
