--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toolbar": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/bcrypt": "^6.0.0",
     "@types/dompurify": "^3.0.5",
     "@types/pg": "^8.15.5",
     "@types/react-syntax-highlighter": "^15.5.13",
@@ -91,6 +92,7 @@
     "ai": "^5.0.28",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
